--- a/app/noteDeck/noteDeck.html
+++ b/app/noteDeck/noteDeck.html
@@ -1,4 +1,4 @@
-<a ng-href="#!/noteDecks/{{ number }}/noteCards"><div>
+<a ng-href="#!/noteDecks/{{ title }}/noteCards"><div>
   
   <h3>{{ title }}</h3>
 
