working on editing notecards

--- a/app/noteCard/noteCard.html
+++ b/app/noteCard/noteCard.html
@@ -6,4 +6,22 @@
 
   <button ng-click="deleteCard(deckName,title)">Delete</button>
 
+  <button ng-click="showEditForm()">Edit</button>
+
+  <form name="editForm" class="editCard" ng-submit="submit(editTitle,editContent)" ng-if="showEdit" novalidate>
+    
+    <label for="title">Edit Card Name: </label>
+
+    <textarea name="title" ng-required="true">{{ editTitle }}</textarea>
+
+    <label for="content">Edit Card Content: </label>
+
+    <textarea name="content" ng-required="true">{{ editContent }}</textarea>
+
+    <input type="submit" value="Save">
+
+    <button ng-click="showEdit = false">Cancel</button>
+
+  </form>
+
 </div>
