notecard refactor passed card obj added testing

--- a/app/noteCard/noteCard.html
+++ b/app/noteCard/noteCard.html
@@ -2,6 +2,8 @@
   
   <h3>{{ title }}</h3>
 
+  <p>{{ card.content }}</p>
+
   <div ng-transclude></div>
 
   <button ng-click="deleteCard(deckName,title)">Delete</button>
