--- a/app/index.html
+++ b/app/index.html
@@ -3,8 +3,11 @@
 <head>
 
   <title>NoteC</title>
+  <link rel="stylesheet" type="text/css" href="bower_components/normalize.css/normalize.css">
   <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.css">
   <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap-theme.css">
+  <link rel="stylesheet" type="text/css" href="container.css">
+  <link rel="stylesheet" type="text/css" href="home/home.css">
 
 </head>
 <body>
@@ -17,7 +20,7 @@
 
     <div ng-controller="tabCtrl">
       
-      <a ng-repeat="tab in tabs" ng-href="{{ tab.link }}">{{ tab.name }}</a>
+      <a ng-class="{ selected : isCurrentTab(tab.name) }" class="tabs" ng-repeat="tab in tabs" ng-href="{{ tab.link }}">{{ tab.name }}</a>
       
     </div>
 
