working on styling of page

--- a/app/noteDecks/noteCards/noteCards.html
+++ b/app/noteDecks/noteCards/noteCards.html
@@ -1,6 +1,6 @@
 <div class = "filter">
   
-  <input ng-model="cardFilter" />
+  <input placeholder="Filter Cards" ng-model="cardFilter" />
 
 </div>
 
