--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.css">
   <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap-theme.css">
   <link rel="stylesheet" type="text/css" href="container.css">
+  <link rel="stylesheet" type="text/css" href="noteDecks/noteDecks.css">
   <link rel="stylesheet" type="text/css" href="home/home.css">
 
 </head>
