--- a/app/noteDecks/noteDecks.html
+++ b/app/noteDecks/noteDecks.html
@@ -1,10 +1,10 @@
 <div class = "filter">
   
-  <input ng-model="deckFilter" />
-
-  <button ng-click="showAddDeck = true">+</button>
+  <input placeholder="Filter Decks" ng-model="deckFilter" />
 
 </div>
+
+<button class="addDeckButton btn-sm btn-success" ng-click="showAddDeck = true">Add Deck</button>
 
 <form name="addDeckForm" class="addDeckForm" ng-show="showAddDeck" ng-submit="ctrl.addNoteDeck(addDeckTitle,addDeckDescription)" novalidate>
   
