--- a/app/noteDeck/noteDeck.html
+++ b/app/noteDeck/noteDeck.html
@@ -1,40 +1,53 @@
-<div>
+<div class="noteDeck">
+
+  <div class="noteDeckInfo" ng-show="!showEdit && !showDelete">
   
-  <a ng-href="#!/noteDecks/{{ title }}/noteCards"><h3>{{ title }}</h3></a>
+    <a ng-href="#!/noteDecks/{{ title }}/noteCards">
 
-  <div ng-transclude></div>
+      <h3 class="noteDeckTitle">{{ title }}</h3>
 
-  <button ng-click="showDelete = true">X</button>
+    </a>
 
-  <div class="deleteDeck" ng-show="showDelete">
-
-    <p>Are you sure you want to delete this deck?  This action cannot be reversed</p>
-
-    <button ng-click="deleteDeck(title)">Delete</button>
-
-    <button ng-click="showDelete = false">Cancel</button>
+    <div ng-transclude></div>
 
   </div>
 
-  <button ng-click="showEditForm()">Edit</button>
+  <div class="noteDeckOptions">
 
-  <div ng-if="showEdit">
+    <button class="showEdit btn btn-xs btn-warning" ng-show="!showEdit && !showDelete" ng-click="showEditForm()">Edit</button>
 
-  <form name="editForm" class="editDeck" ng-submit="editForm.$valid && submit(editTitle,editDescription)" novalidate>
-    
-    <label for="title">Edit Deck Name: </label>
+    <div ng-if="showEdit">
 
-    <textarea name="title" ng-required="true" ng-model="editTitle"></textarea>
+      <form name="editForm" class="editDeck" ng-submit="editForm.$valid && submit(editTitle,editDescription)" novalidate>
+        
+        <label for="title">Edit Deck Name: </label>
 
-    <label for="content">Edit Deck Description: </label>
+        <textarea name="title" rows="1" cols="35" ng-required="true" ng-model="editTitle"></textarea>
 
-    <textarea name="content" ng-model="editDescription"></textarea>
+        <label for="content">Edit Deck Description: </label>
 
-    <input type="submit" value="Save">
+        <textarea name="content" cols="35" ng-model="editDescription"></textarea>
 
-  </form>
+        <input type="submit" value="Save">
 
-  <button ng-click="hideEdit()">Cancel</button>
+        <button type="button" class="cancel" ng-click="hideEdit()">Cancel</button>
+
+      </form>
+
+
+    </div>
+
+    <button class="showDelete btn btn-xs btn-danger" ng-show="!showEdit && !showDelete" ng-click="showDelete = true">Delete</button>
+
+    <div class="deleteDeck" ng-show="showDelete">
+
+      <p>Are you sure you want to delete this deck?  This action cannot be reversed</p>
+
+      <button ng-click="deleteDeck(title)">Delete</button>
+
+      <button ng-click="showDelete = false">Cancel</button>
+
+    </div>
 
   </div>
 
