--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" type="text/css" href="home/home.css">
   <link rel="stylesheet" type="text/css" href="noteDecks/noteDecks.css">
   <link rel="stylesheet" type="text/css" href="noteDeck/noteDeck.css">
+  <link rel="stylesheet" type="text/css" href="noteC-app-animations.css">
 
 </head>
 <body>
@@ -48,10 +49,10 @@
   <script type="text/javascript" src="bower_components/firebase/firebase.js"></script>
   <script type="text/javascript" src="bower_components/angularfire/dist/angularfire.js"></script>
   <script type="text/javascript" src="noteC-app-library.js"></script>
+  <script type="text/javascript" src="noteC-app-views.js"></script>
   <script type="text/javascript" src="noteC-app-directives.js"></script>
   <script type="text/javascript" src="noteDeck/noteDeck.js"></script>
   <script type="text/javascript" src="noteCard/noteCard.js"></script>
-  <script type="text/javascript" src="noteC-app-views.js"></script>
   <script type="text/javascript" src="home/home.js"></script>
   <script type="text/javascript" src="noteDecks/noteDecks.js"></script>
   <script type="text/javascript" src="noteDecks/noteCards/noteCards.js"></script>
