--- a/app/noteDeck/noteDeck.html
+++ b/app/noteDeck/noteDeck.html
@@ -1,6 +1,6 @@
 <div class="noteDeck">
 
-  <div class="noteDeckInfo" ng-show="!showEdit && !showDelete">
+  <div class="noteDeckInfo noteDeckSlide" ng-show="!showEdit && !showDelete">
   
     <a ng-href="#!/noteDecks/{{ title }}/noteCards">
 
@@ -8,17 +8,21 @@
 
     </a>
 
-    <div ng-transclude></div>
+    <div class="noteDeckDescription" ng-transclude></div>
+
+    <div class="noteDeckButtons">
+
+      <button class="showEdit btn btn-xs btn-warning" ng-show="!showEdit && !showDelete" ng-click="showEditForm()">Edit</button>
+
+      <button class="showDelete btn btn-xs btn-danger" ng-show="!showEdit && !showDelete" ng-click="showDelete = true">Delete</button>
+
+    </div>
 
   </div>
 
-  <div class="noteDeckOptions">
+    <div class="editDeck noteDeckSlide" ng-show="showEdit">
 
-    <button class="showEdit btn btn-xs btn-warning" ng-show="!showEdit && !showDelete" ng-click="showEditForm()">Edit</button>
-
-    <div ng-show="showEdit">
-
-      <form name="editForm" class="editDeck" ng-submit="editForm.$valid && submit(editTitle,editDescription)" novalidate>
+      <form name="editForm" class="editDeckForm" ng-submit="editForm.$valid && submit(editTitle,editDescription)" novalidate>
         
         <label for="title">Edit Deck Name: </label>
 
@@ -28,27 +32,30 @@
 
         <textarea name="content" cols="35" ng-model="editDescription"></textarea>
 
-        <input class="choose btn btn-xs btn-warning" type="submit" value="Save">
+        <div class="noteDeckButtons">
 
-        <button class="choose btn btn-xs btn-default" type="button" class="cancel" ng-click="showEdit = false">Cancel</button>
+          <button class="choose btn btn-xs btn-default" type="button" class="cancel" ng-click="showEdit = false">Cancel</button>
+
+          <input class="choose btn btn-xs btn-warning" type="submit" value="Save">
+
+        </div>
 
       </form>
 
-
     </div>
 
-    <button class="showDelete btn btn-xs btn-danger" ng-show="!showEdit && !showDelete" ng-click="showDelete = true">Delete</button>
-
-    <div class="deleteDeck" ng-show="showDelete">
+    <div class="deleteDeck noteDeckSlide" ng-show="showDelete">
 
       <p>Are you sure you want to delete this deck?  This action cannot be reversed</p>
 
-      <button class="choose btn btn-xs btn-danger" ng-click="deleteDeck(title)">Delete</button>
+      <div class="noteDeckButtons">
 
-      <button class="choose btn btn-xs btn-default" ng-click="showDelete = false">Cancel</button>
+        <button class="choose btn btn-xs btn-default" ng-click="showDelete = false">Cancel</button>
+
+        <button class="choose btn btn-xs btn-danger" ng-click="deleteDeck(title)">Delete</button>
+
+      </div>
 
     </div>
-
-  </div>
 
 </div>
