--- a/app/index.html
+++ b/app/index.html
@@ -3,6 +3,8 @@
 <head>
 
   <title>NoteC</title>
+
+  <!-- build:css ./assets/combined.css -->
   <link rel="stylesheet" type="text/css" href="bower_components/normalize.css/normalize.css">
   <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.css">
   <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap-theme.css">
@@ -11,6 +13,7 @@
   <link rel="stylesheet" type="text/css" href="noteDecks/noteDecks.css">
   <link rel="stylesheet" type="text/css" href="noteDeck/noteDeck.css">
   <link rel="stylesheet" type="text/css" href="noteC-app-animations.css">
+  <!-- endbuild -->
 
 </head>
 <body>
@@ -41,6 +44,7 @@
 
   </div>
 
+  <!-- build:js ./assets/combined.js -->
   <script type="text/javascript" src="bower_components/angular/angular.js"></script>
   <script type="text/javascript" src="bower_components/angular-route/angular-route.js"></script>
   <script type="text/javascript" src="bower_components/angular-animate/angular-animate.js"></script>
@@ -57,5 +61,7 @@
   <script type="text/javascript" src="noteDecks/noteDecks.js"></script>
   <script type="text/javascript" src="noteDecks/noteCards/noteCards.js"></script>
   <script type="text/javascript" src="noteC-app.js"></script>
+  <!-- endbuild -->
+
 </body>
 </html>
