--- a/app/noteCard/noteCard.html
+++ b/app/noteCard/noteCard.html
@@ -12,7 +12,7 @@
 
       <button class="showEdit btn btn-xs btn-warning" ng-click="showEditForm()">Edit</button>
 
-      <button class="showDelete btn btn-xs btn-danger" ng-click="deleteCard(deckName,title)">Delete</button>
+      <button class="showDelete btn btn-xs btn-danger" ng-click="showDelete = true">Delete</button>
 
     </div>
 
@@ -41,5 +41,19 @@
     </form>
 
   </div>
+
+    <div class="deleteCard noteCardSlide" ng-show="showDelete">
+
+      <p>Are you sure you want to delete this card?  This action cannot be reversed</p>
+
+      <div class="noteCardButtons">
+
+        <button class="choose btn btn-xs btn-default" ng-click="showDelete = false">Cancel</button>
+
+        <button class="choose btn btn-xs btn-danger" ng-click="deleteCard(deckName,title)">Delete</button>
+
+      </div>
+
+    </div>
 
 </div>
