--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" type="text/css" href="container.css">
   <link rel="stylesheet" type="text/css" href="home/home.css">
   <link rel="stylesheet" type="text/css" href="noteDecks/noteDecks.css">
+  <link rel="stylesheet" type="text/css" href="noteDecks/noteCards/noteCards.css">
   <link rel="stylesheet" type="text/css" href="noteDeck/noteDeck.css">
   <link rel="stylesheet" type="text/css" href="noteCard/noteCard.css">
   <link rel="stylesheet" type="text/css" href="noteC-app-animations.css">
