working on directive styling

--- a/app/noteCard/noteCard.html
+++ b/app/noteCard/noteCard.html
@@ -10,7 +10,7 @@
 
     <div class="noteCardButtons">
 
-      <button class="showEdit btn btn-xs btn-warning" ng-click="showEditForm()">Edit</button>
+      <button class="showEdit btn btn-xs btn-info" ng-click="showEditForm()">Edit</button>
 
       <button class="showDelete btn btn-xs btn-danger" ng-click="showDelete = true">Delete</button>
 
@@ -30,11 +30,11 @@
 
       <textarea name="content" cols="35" ng-model="editContent"></textarea>
 
-      <div class="noteClassButtons">
+      <div class="noteCardButtons">
 
           <button class="choose btn btn-xs btn-default" ng-click="showEdit = false">Cancel</button>
 
-          <input class="choose btn btn-xs btn-warning" type="submit" value="Save">
+          <input class="choose btn btn-xs btn-info" type="submit" value="Save">
     
       </div>
 
