--- a/app/noteDeck/noteDeck.html
+++ b/app/noteDeck/noteDeck.html
@@ -12,7 +12,7 @@
 
     <div class="noteDeckButtons">
 
-      <button class="showEdit btn btn-xs btn-warning" ng-show="!showEdit && !showDelete" ng-click="showEditForm()">Edit</button>
+      <button class="showEdit btn btn-xs btn-info" ng-show="!showEdit && !showDelete" ng-click="showEditForm()">Edit</button>
 
       <button class="showDelete btn btn-xs btn-danger" ng-show="!showEdit && !showDelete" ng-click="showDelete = true">Delete</button>
 
@@ -36,7 +36,7 @@
 
           <button class="choose btn btn-xs btn-default" type="button" class="cancel" ng-click="showEdit = false">Cancel</button>
 
-          <input class="choose btn btn-xs btn-warning" type="submit" value="Save">
+          <input class="choose btn btn-xs btn-info" type="submit" value="Save">
 
         </div>
 
