added add deck styling

--- a/app/noteCard/noteCard.html
+++ b/app/noteCard/noteCard.html
@@ -32,7 +32,7 @@
 
       <div class="noteCardButtons">
 
-          <button class="choose btn btn-xs btn-default" ng-click="showEdit = false">Cancel</button>
+          <button class="choose btn btn-xs btn-default" type="button" ng-click="showEdit = false">Cancel</button>
 
           <input class="choose btn btn-xs btn-info" type="submit" value="Save">
     
@@ -48,7 +48,7 @@
 
       <div class="noteCardButtons">
 
-        <button class="choose btn btn-xs btn-default" ng-click="showDelete = false">Cancel</button>
+        <button class="choose btn btn-xs btn-default" type="button" ng-click="showDelete = false">Cancel</button>
 
         <button class="choose btn btn-xs btn-danger" ng-click="deleteCard(deckName,title)">Delete</button>
 
