--- a/app/noteDecks/noteDecks.html
+++ b/app/noteDecks/noteDecks.html
@@ -4,7 +4,7 @@
 
 </div>
 
-<button class="addDeckButton btn-sm btn-success" ng-click="showAddDeck = true">Add Deck</button>
+<button class="addDeckButton btn-lg btn-success" ng-click="showAddDeck = true">Add Deck</button>
 
 <div class="addDeckOverlay" ng-show="showAddDeck">
 
