--- a/app/noteCard/noteCard.html
+++ b/app/noteCard/noteCard.html
@@ -10,9 +10,9 @@
 
     <div class="noteCardButtons">
 
-      <button class="showEdit btn btn-xs btn-info" ng-click="showEditForm()">Edit</button>
+      <button class="showEdit btn btn-md btn-info" ng-click="showEditForm()">Edit</button>
 
-      <button class="showDelete btn btn-xs btn-danger" ng-click="showDelete = true">Delete</button>
+      <button class="showDelete btn btn-md btn-danger" ng-click="showDelete = true">Delete</button>
 
     </div>
 
@@ -32,9 +32,9 @@
 
       <div class="noteCardButtons">
 
-          <button class="choose btn btn-xs btn-default" type="button" ng-click="showEdit = false">Cancel</button>
+          <button class="choose btn btn-md btn-default" type="button" ng-click="showEdit = false">Cancel</button>
 
-          <input class="choose btn btn-xs btn-info" type="submit" value="Save">
+          <input class="choose btn btn-md btn-info" type="submit" value="Save">
     
       </div>
 
@@ -48,9 +48,9 @@
 
       <div class="noteCardButtons">
 
-        <button class="choose btn btn-xs btn-default" type="button" ng-click="showDelete = false">Cancel</button>
+        <button class="choose btn btn-md btn-default" type="button" ng-click="showDelete = false">Cancel</button>
 
-        <button class="choose btn btn-xs btn-danger" ng-click="deleteCard(deckName,title)">Delete</button>
+        <button class="choose btn btn-md btn-danger" ng-click="deleteCard(deckName,title)">Delete</button>
 
       </div>
 
