--- a/app/noteDeck/noteDeck.html
+++ b/app/noteDeck/noteDeck.html
@@ -6,7 +6,9 @@
 
       <h3 class="noteDeckTitle">{{ title }}</h3>
 
-      <div class="noteDeckDescription" ng-transclude></div>
+      <!-- <div class="noteDeckDescription" ng-transclude></div> -->
+
+      <div class="noteDeckDescription">{{ deck.description }}</div>
     
     </a>
 
