--- a/app/noteDeck/noteDeck.html
+++ b/app/noteDeck/noteDeck.html
@@ -2,9 +2,9 @@
 
   <div class="noteDeckInfo noteDeckSlide" ng-show="!showEdit && !showDelete">
   
-    <a ng-href="#!/noteDecks/{{ title }}/noteCards">
+    <a ng-href="#!/noteDecks/{{ deck.title }}/noteCards">
 
-      <h3 class="noteDeckTitle">{{ title }}</h3>
+      <h3 class="noteDeckTitle">{{ deck.title }}</h3>
 
       <!-- <div class="noteDeckDescription" ng-transclude></div> -->
 
