enabled mapped delete functionality

--- a/app/noteDeck/noteDeck.html
+++ b/app/noteDeck/noteDeck.html
@@ -54,7 +54,7 @@
 
         <button class="choose btn btn-md btn-default" ng-click="showDelete = false">Cancel</button>
 
-        <button class="choose btn btn-md btn-danger" ng-click="deleteDeck(title)">Delete</button>
+        <button class="choose btn btn-md btn-danger" ng-click="deleteDeck()">Delete</button>
 
       </div>
 
