working on defining cards with cardmap

--- a/app/noteCard/noteCard.html
+++ b/app/noteCard/noteCard.html
@@ -2,7 +2,7 @@
   
   <div class="noteCardInfo noteCardSlide" ng-show="!showEdit && !showDelete">
 
-    <h3 class="noteCardTitle">{{ title }}</h3>
+    <h3 class="noteCardTitle">{{ card.title }}</h3>
 
     <p class="noteCardContent">{{ card.content }}</p>
 
