--- a/app/noteDecks/noteCards/noteCards.html
+++ b/app/noteDecks/noteCards/noteCards.html
@@ -24,9 +24,9 @@
 
 <div class="cards">
 
-  <div class="col-md-4 col-sm-6" ng-repeat="(cardName,cardProperties) in noteCards | with:cardFilter">
+  <div class="col-md-4 col-sm-6" ng-repeat="(cardKey,cardValue) in noteCards | with:cardFilter">
 
-    <note-card class="noteCardWrapper" note-card-deck="{{ deckName }}" note-card-title="{{ cardName }}">
+    <note-card class="noteCardWrapper" card="{{ cardKey }}" deck="{{ deckName }}">
       
     </note-card>
 
