enabled add and get functionality for cards

--- a/app/noteDecks/noteCards/noteCards.html
+++ b/app/noteDecks/noteCards/noteCards.html
@@ -12,7 +12,7 @@
   
   <input class="addCardSetting" name="title" type="text" ng-required="true" ng-model="addCardTitle">
 
-  <label for="content">Card Content:</label>
+  <label for="content">Card Content (optional):</label>
 
   <textarea class="addCardSetting" name="content" cols="35" ng-model="addCardContent"></textarea>
 
