added notecard delete functionality

--- a/app/noteCard/noteCard.html
+++ b/app/noteCard/noteCard.html
@@ -50,7 +50,7 @@
 
         <button class="choose btn btn-md btn-default" type="button" ng-click="showDelete = false">Cancel</button>
 
-        <button class="choose btn btn-md btn-danger" ng-click="deleteCard(deckName,title)">Delete</button>
+        <button class="choose btn btn-md btn-danger" ng-click="deleteCard()">Delete</button>
 
       </div>
 
