added deckname to cards route

--- a/app/noteDecks/noteCards/noteCards.html
+++ b/app/noteDecks/noteCards/noteCards.html
@@ -1,3 +1,5 @@
+<h2>Deck: {{ deckName }}</h2>
+
 <div class = "filter">
   
   <input class="filterInput" placeholder="Filter Cards" ng-model="cardFilter" />
