selectable event now working styled checkbox

--- a/app/noteCard/noteCard.html
+++ b/app/noteCard/noteCard.html
@@ -10,7 +10,7 @@
 
     <div class="noteCardSelectable" ng-show="isSelectable">
       
-      <input type="checkbox" class="noteCardSelection" ng-click="selected">
+      <input type="checkbox" class="noteCardSelection" ng-model="selected">
 
     </div>
 
