--- a/noteDecks/noteCards/noteCards.html
+++ b/noteDecks/noteCards/noteCards.html
@@ -1,6 +1,24 @@
+<h2>Deck: {{ deckName }}</h2>
+
 <div class = "filter">
   
   <input class="filterInput" placeholder="Filter Cards" ng-model="cardFilter" />
+
+</div>
+
+<button class="showMassDelete btn btn-md btn-danger" ng-disabled="!ctrl.areSelected()" ng-click="ctrl.showMassDeleteForm(true)">Delete Selected Cards</button>
+
+<div class="massDeleteFormWrapper" ng-show="showMassDelete">
+
+  <form name="massDeleteForm" class="massDeleteForm" ng-submit="ctrl.submitMassDeleteForm()">
+
+    <p class="massDeleteText">Are you sure you want to delete these cards?</p>
+
+    <button type="button" class="massDeleteBtn btn btn-md btn-default" ng-click="ctrl.showMassDeleteForm(false)">Cancel</button>
+
+    <button class="massDeleteBtn btn btn-md btn-danger" ng-click="ctrl.submitMassDeleteForm()">Delete</button>
+
+  </form>
 
 </div>
 
@@ -26,7 +44,9 @@
 
   <div class="col-md-4 col-sm-6" ng-repeat="(cardKey,cardValue) in noteCards | with:cardFilter">
 
-    <note-card class="noteCardWrapper" card="{{ cardKey }}" deck="{{ deckName }}">
+    <!-- <input class="cardSelection" type="checkbox" ng-click="selected[cardKey] = !selected[cardKey]"> -->
+
+    <note-card class="noteCardWrapper" card="{{ cardKey }}" deck="{{ deckName }}" is-selectable="true">
       
     </note-card>
 
